--- a/main/templates/main/ledger.html
+++ b/main/templates/main/ledger.html
@@ -14,7 +14,7 @@
                 <th>Registration ID</th>
                 <th>Sign In Time</th>
                 <th>Sign Out Time</th>
-                <th>Hours Worked</th>
+                <th>Total Minutes</th>
             </tr>
         </thead>
         <tbody>
@@ -24,7 +24,7 @@
                 <td>{{ record.student.registration_id }}</td>
                 <td>{{ record.sign_in_time }}</td>
                 <td>{{ record.sign_out_time }}</td>
-                <td>{{ record.hours_worked }}</td>
+                <td>{{ record.minutes_worked }}</td>
             </tr>
             {% endfor %}
         </tbody>
