--- a/main/templates/main/error.html
+++ b/main/templates/main/error.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error</title>
-</head>
-<body>
+
+{% extends "main/main.html" %}
+
+{% block content %}
     <h1>Error</h1>
     <p>{{ message }}</p>
-</body>
-</html>
+    {% endblock content %}
