--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="container">
     <div class="d-flex align-items-center justify-content-center mt-5">
-        <h3 id="Welcome">Welcome to IDEA Lab</h3>
+        <h3 id="Welcome">Welcome to A.I.C.T.E  I.D.E.A Lab</h3>
     </div>
 
     <div class="row mt-5">
@@ -33,7 +33,7 @@
             <a href="admin/" class="btn btn-warning btn-lg btn-block">Admin</a>
         </div>
         <div class="col-md-4 ">
-            <a href="#" class="btn btn-warning btn-lg btn-block">Data</a>
+            <a href="display" class="btn btn-warning btn-lg btn-block">Display</a>
         </div>
 
     </div>
