--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f2f2f2;
+            background-color: beige !important;
         }
 
         nav {
@@ -35,11 +35,6 @@
             max-width: 600px;
             margin: 50px auto;
             text-align: center;
-        }
-
-        .container h2 {
-            color: #007bff;
-            margin-bottom: 20px;
         }
 
         
