--- a/main/templates/main/register.html
+++ b/main/templates/main/register.html
@@ -24,7 +24,7 @@ Register
 </div>
 <div class="messages">
     {% if messages %}
-        <div class="alert alert-primary" role="alert">
+        <div class="alert alert-danger" role="alert">
             {% for message in messages %}
                 {{ message }}
             {% endfor %}
