--- a/main/templates/main/sign_in.html
+++ b/main/templates/main/sign_in.html
@@ -7,6 +7,15 @@ Sign In
 
 {% block content %}
 <div class="container">
+    <div class="messages">
+        {% if messages %}
+            <div class="alert alert-danger" role="alert">
+                {% for message in messages %}
+                    {{ message }}
+                {% endfor %}
+            </div>
+        {% endif %}
+    </div>
     <h2>Sign In</h2>
     <form method="post">
         {% csrf_token %}
