--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -12,7 +12,7 @@
 
     <div class="row mt-5">
         <div class="col-md-4">
-            <a href="verify" class="btn btn-primary btn-lg btn-block">Register</a>
+            <a href="register" class="btn btn-primary btn-lg btn-block">Register</a>
         </div>
         <div class="col-md-4">
             <a href="sign-in" class="btn btn-primary btn-lg btn-block">Sign In</a>
