--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -53,7 +53,7 @@
 </head>
 <body>
     <nav>
-        <h1>POORNIMA INSTITUTE OF TECHNOLOGY</h1>
+        <h1>POORNIMA INSTITUTE OF ENGINEERING & TECHNOLOGY</h1>
     </nav>
     
     <div class="container">
